--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinDemo">
-        <activity android:name=".activity.SecondActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".activity.MainActivity"
+        <activity android:name="com.ywj.kotlindemo.ui.activity.MainActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
